--- a/01_dummy_login_register/package.json
+++ b/01_dummy_login_register/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "faker": "^5.5.3",
